--- a/FeatureLabeling/FeatureLabeling.ipynb
+++ b/FeatureLabeling/FeatureLabeling.ipynb
@@ -98,7 +98,7 @@
     "C=np.append(C,A,axis=1)\n",
     "for i in range(np.shape(C)[0]):\n",
     "    a1=C[[i],:]\n",
-    "    with open(\"Labels_extra1.txt\",\"ab\") as file:\n",
+    "    with open(\"Labels_extra.txt\",\"ab\") as file:\n",
     "        np.savetxt(file,a1,fmt='%.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f')"
    ]
   },
